--- a/Multiple Screens WatchKit App/Base.lproj/Interface.storyboard
+++ b/Multiple Screens WatchKit App/Base.lproj/Interface.storyboard
@@ -1,16 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="14256" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="16097" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+    <device id="watch38"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14243"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="14219"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="16012"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="Multiple_Screens_WatchKit_App" customModuleProvider="target">
+                    <items>
+                        <button width="1" alignment="left" title="Show First" id="kj3-V0-UTb">
+                            <connections>
+                                <action selector="firstTappedOn" destination="AgC-eL-Hgc" id="gJU-5r-bGJ"/>
+                            </connections>
+                        </button>
+                        <button width="1" alignment="left" title="Show Second" id="aGe-vr-4AZ">
+                            <connections>
+                                <action selector="secondTappedOn" destination="AgC-eL-Hgc" id="5fT-9v-Q7t"/>
+                            </connections>
+                        </button>
+                        <button width="1" alignment="left" title="Show Third" id="xr2-CL-8On">
+                            <connections>
+                                <action selector="thirdTappedOn" destination="AgC-eL-Hgc" id="oxC-wy-C9g"/>
+                            </connections>
+                        </button>
+                    </items>
+                </controller>
             </objects>
-            <point key="canvasLocation" x="220" y="345"/>
+            <point key="canvasLocation" x="211" y="43"/>
+        </scene>
+        <!--first-->
+        <scene sceneID="YZZ-ld-vud">
+            <objects>
+                <controller identifier="first" id="ByS-uP-fep">
+                    <items>
+                        <label alignment="left" text="First Screen" id="wjH-lS-SbS"/>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="505" y="22"/>
+        </scene>
+        <!--second-->
+        <scene sceneID="2xI-jv-aya">
+            <objects>
+                <controller identifier="second" id="DXf-69-N24">
+                    <items>
+                        <label alignment="left" text="Second Screen" id="JWh-g9-KAL"/>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="773" y="14"/>
+        </scene>
+        <!--third-->
+        <scene sceneID="zea-Rr-E2J">
+            <objects>
+                <controller identifier="third" id="1Sk-On-X1u">
+                    <items>
+                        <label alignment="left" text="Third Screen" id="pAM-E0-YP5"/>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="1076" y="3"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -27,21 +79,21 @@
                     </connections>
                 </notificationController>
             </objects>
-            <point key="canvasLocation" x="220" y="643"/>
+            <point key="canvasLocation" x="220" y="673"/>
         </scene>
         <!--Notification Controller-->
         <scene sceneID="ZPc-GJ-vnh">
             <objects>
-                <controller id="4sK-HA-Art" customClass="NotificationController" customModuleProvider="target"/>
+                <controller id="4sK-HA-Art" customClass="NotificationController" customModule="Multiple_Screens_WatchKit_App" customModuleProvider="target"/>
             </objects>
-            <point key="canvasLocation" x="468" y="643"/>
+            <point key="canvasLocation" x="526" y="643"/>
         </scene>
         <!--Notification Controller-->
         <scene sceneID="Niz-AI-uX2">
             <objects>
-                <controller id="eXb-UN-Cd0" customClass="NotificationController" customModuleProvider="target"/>
+                <controller id="eXb-UN-Cd0" customClass="NotificationController" customModule="Multiple_Screens_WatchKit_App" customModuleProvider="target"/>
             </objects>
-            <point key="canvasLocation" x="468" y="345"/>
+            <point key="canvasLocation" x="526" y="345"/>
         </scene>
     </scenes>
 </document>
